cmake_minimum_required(VERSION 3.6)

# Project name (!= executable name!)
project(acu-impl)

# CMake and compiler flags
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic")

# Disable -Wununsed-parameter as broker::get produces this error even when used correctly (I think?!)
# TODO: Maybe scope this to the source files where broker::get is used? (Currently alert_mapper/tcp_alert and some tests)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter")

# Add ./cmake to CMAKE_MODULE_PATH to 'source' it
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

# Link against librocksdb
#
# Find the library
find_package(Rocks REQUIRED)
# Add the headers to include directories
include_directories(BEFORE ${RDB_INCLUDE_DIR})
# Add the library to the LINK_LIBS
set(LINK_LIBS ${LINK_LIBS} ${RDB_LIBRARY})

# Link against libbroker
#
# Find the library
find_package(Broker REQUIRED)
# Add the headers to include directories
include_directories(BEFORE ${BROKER_INCLUDE_DIR})
# Add the library to the LINK_LIBS
set(LINK_LIBS ${LINK_LIBS} ${BROKER_LIBRARY})

# Link against libacu
#
# Find the library
find_package(Acu REQUIRED)
# Add the headers to include directories
include_directories(BEFORE ${ACU_INCLUDE_DIR})
# Add the library to the LINK_LIBS
set(LINK_LIBS ${LINK_LIBS} ${ACU_LIBRARY})

# Add our include directory
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)

# Add sub directories
add_subdirectory(src)
add_subdirectory(test)
